Implemented QR scanner
- Implemented QR scanner activity
- Added 'home screen' elements with scan button
- Removed progress bar from main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="btnCheckout">Go to shopping cart (€ 0,0)</string>
+    <string name="btnScan">Scan the code to join the table</string>
 </resources>
