Completed user story 2
- Created orderListFragment with expandable view, adapter and buttons
- Updates bottom button on main activity with additional info
- Further created / modified data classes to match backend DTO classes
- Created public fun to pass back session info from Fragments to main Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">EasyOrder</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="btnCheckout">View and send your order (€ 0,0)</string>
+    <string name="btnOrders">View and send your order (€ 0,0)</string>
     <string name="btnScan">Scan the code to join the table</string>
+    <string name="btnCheckout">Click to pay</string>
 </resources>
